Fix main container width overflowing

--- a/app/components/MainContainer/main-container.scss
+++ b/app/components/MainContainer/main-container.scss
@@ -1,5 +1,16 @@
+@import 'app/stylesheet/variables';
+@import 'app/stylesheet/mixins/media';
+
 .container {
   flex-grow: 1;
   background: rgba(244,247,248,1);
   width: 100%;
+
+  @include tablet {
+    width: calc(100% - #{$sidebar-minimized-width});
+  }
+
+  @include desktop {
+    width: calc(100% - #{$sidebar-width});
+  }
 }
